# Pitot-Tube

./: .gitmodules  CMakeLists.txt  README.md  format.sh
lib/NPA730-Pico/: CMakeLists.txt  npa730.cpp  npa730.hpp
src/: hw_config.c  main.cpp  pins.hpp  pts.cpp  pts.hpp
